[package]
name = "boojum"
version = "0.2.0"
edition = "2021"

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
unroll = "0.1"
num_cpus = "1"
rayon = "1"
smallvec = { version = "*", features = ["const_generics", "const_new", "serde"] }
crossbeam = "*"
sha3 = { git = "https://github.com/RustCrypto/hashes.git", rev = "7a187e934c1f6c68e4b4e5cf37541b7a0d64d303" }
lazy_static = "*"
arrayvec = "0.7"
const_format = "0.2"
bincode = "*"
ethereum-types = "=0.14.1"
cs_derive = { path = "./cs_derive" }
itertools = "0.10"
blake2 = "0.10"
sha2 = "0.10"
num-modular = "0.5.1"
packed_simd = { version = "0.3.9" , optional = true}
pairing = { package = "pairing_ce", git = "https://github.com/matter-labs/pairing.git" }
crypto-bigint = "0.5"
convert_case = "*"
firestorm = "*"
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
criterion = "0.4"
serde_json = "*"
hex = "*"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.bench]
debug = false
codegen-units = 1
lto = "fat"
opt-level = 3

[features]
# If enabled, logs will be using trace, if disabled, they will be printed to stdout.
log_tracing = ["tracing"]
# Currently packed_simd is no longer working with the newest nightly.
# But we still keep it as a feature, as we didn't migrate all the code, and 
# some people might want to use older rust nightly, to be able to gain some performance.
include_packed_simd = ["packed_simd"]
cr_paranoia_mode = []
debug_track = []