[package]
name = "boojum"
version = "0.2.2"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-boojum"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "Boojum cryptographic library"

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
unroll = "0.1"
num_cpus = "1"
rayon = "1"
smallvec = { version = "1.13", features = ["const_generics", "const_new", "serde"] }
crossbeam = "0.8.4"
sha3 = { package = "sha3_ce", version = "=0.10.6" }
lazy_static = "1.5"
arrayvec = "0.7"
const_format = "0.2"
bincode = "1.3"
ethereum-types = "=0.14.1"
cs_derive = { version = "=0.2.2", path = "./cs_derive" }
itertools = "0.10"
blake2 = "0.10"
sha2 = "0.10"
num-modular = "0.5.1"
pairing = { package = "pairing_ce", version = "=0.28.6" }
crypto-bigint = "0.5"
convert_case = "0.6"
firestorm = "0.5"
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
criterion = "0.4"
serde_json = "1"
hex = "0.4"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.bench]
debug = false
codegen-units = 1
lto = "fat"
opt-level = 3

[features]
# If enabled, logs will be using trace, if disabled, they will be printed to stdout.
log_tracing = ["tracing"]
cr_paranoia_mode = []
debug_track = []
